fix: contact button mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -450,7 +450,7 @@ footer .logo span {
         display: block;
     }
 
-    header button {
+    header .contact {
         display: none;
     }
 
